<resources>
    <string name="app_name">ECTRO</string>
    <string name="welcome_back_greeting">Selamat Datang Kembali,\nSilahkan Login terlebih dahulu.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_acc_yet">Belum punya akun?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="loading">Loading</string>
    <string name="an_error_occurred">Terjadi Kesalahan</string>
    <string name="pls_check_your_internet">Mohon periksa koneksi internet anda.</string>
    <string name="try_again">Coba Lagi</string>
    <string name="sign_up_desc">Selamat Datang di ECTRO,\nSilahkan Buat Akun terlebih dahulu.</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="register">DAFTAR</string>
    <string name="already_have_acc">Sudah punya akun?</string>
    <string name="login_here">Login Disini</string>
    <string name="bad_signal_icon">Ikon Sinyal Buruk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Beranda</string>
    <string name="profile">Profil</string>
    <string name="button_scan">Button Scan</string>
    <string name="active_role">Role Aktif</string>
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="empty_email">Email tidak boleh kosong</string>
    <string name="empty_password">Password tidak boleh kosong</string>
    <string name="pass_not_match">Password tidak cocok</string>
    <string name="invalid_email">Format email tidak valid</string>
    <string name="invalid_password">Format Password Tidak Valid</string>
    <string name="password_creating_hint">Harus berisi Huruf besar, Huruf kecil, Angka dan paling sedikit 8 karakter</string>
    <string name="failed_create_account">Gagal membuat akun</string>
    <string name="successfully_create_account">Berhasil membuat akun</string>
    <string name="name_too_short">Nama terlalu singkat</string>
    <string name="authentication_failed">Otentikasi gagal</string>
    <string name="app_settings">Pengaturan Aplikasi</string>
    <string name="dark_mode_icon">dark mode icon</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="language_icon">language icon</string>
    <string name="language">Bahasa</string>
    <string name="change">Ubah</string>
    <string name="account_info">Info Akun</string>
    <string name="button_settings">button settings</string>
    <string name="logout">KELUAR</string>
    <string name="logout_account">Keluar Akun</string>
    <string name="verification_email_sent">Email verifikasi berhasil dikirim</string>
    <string name="database_connection_failed">Failed to connect to Database</string>
    <string name="no">Tidak</string>
    <string name="sure">Yakin</string>
    <string name="are_you_sure_want_to_logout">Apakah anda yakin ingin keluar?</string>
    <string name="btn_back">Back Button</string>
    <string name="email_not_verified">*Email belum terverifikasi</string>
    <string name="email_is_verified">Email Terverifikasi</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="membership">Keanggotaan</string>
    <string name="announcement">Pengumuman</string>
    <string name="settings">Pengaturan</string>
    <string name="npm">NPM</string>
    <string name="department">Departemen</string>
    <string name="division">Divisi</string>
    <string name="position">Posisi</string>
    <string name="student_information">Informasi Mahasiswa</string>
    <string name="role_info">Informasi Keanggotaan</string>
    <string name="social_media">Media Sosial (opsional)</string>
    <string name="instagram_link">Tautan Akun Instagram</string>
    <string name="linkedin_link">Tautan Akun Linkedin</string>
    <string name="save">Simpan</string>
    <string name="instagram_username">Username Instagram</string>
    <string name="linkedin_username">Username Linkedin</string>
    <string name="see_all">Lihat Semua</string>
    <string name="event_name">Nama Acara</string>
    <string name="event_desc">Deskripsi Acara</string>
    <string name="event_date">Tanggal</string>
    <string name="event_time">Waktu</string>
    <string name="event_category">Kategori</string>
    <string name="with_attendance_form">Absensi via Ectro</string>
    <string name="event_info">Informasi Acara</string>
    <string name="event_place_date">Tempat dan Tanggal</string>
    <string name="event_type">Tipe Acara</string>
    <string name="additional_info">Informasi Tambahan</string>
    <string name="empty_event_name">Mohon masukkan nama acara</string>
    <string name="empty_event_type">Mohon pilih tipe acara</string>
    <string name="empty_event_date">Mohon pilih tanggal acara</string>
    <string name="empty_event_time">Mohon  isi waktu acara</string>
    <string name="empty_event_category">Mohon masukkan kategori acara</string>
    <string name="add_event">Tambah Acara</string>
    <string name="successfully_add_event">Berhasil menambahkan acara baru</string>
    <string name="event_place">Lokasi Acara</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="empty_event_place">Mohon masukkan lokasi acara</string>
    <string name="event_detail">Detail Acara</string>
    <string name="participant">Peserta</string>
    <string name="absent">Absen</string>
    <string name="already_absent">Sudah Absen</string>
    <string name="participant_list">Daftar Peserta</string>
    <string name="attendance">Kehadiran</string>
    <string name="fill_attendance">Isi Kehadiran</string>
    <string name="created_by">Dibuat oleh</string>
    <string name="other">Lainnya</string>
    <string name="additional_button">Tombol Tambahan</string>
    <string name="empty_meeting_link">Mohon masukkan tautan online meeting</string>
    <string name="empty_additional_link">Mohon isi field berikut</string>
    <string name="please_fill_attendance_first">Mohon Absen Dahulu</string>
    <string name="please_choose_online_media">Mohon pilih media acara</string>
    <string name="please_complete_your_data">Silahkan lengkapi profil anda.</string>
    <string name="invalid_id">NPM tidak valid</string>
    <string name="successfully_update_data">Berhasil memperbaharui data</string>
    <string name="update_failed">Gagal memperbaharui data</string>
    <string name="request_role">Request</string>
    <string name="successfully_request_role">Berhasil mengirim permintaan</string>
    <string name="request_processed">Permintaan sedang diproses</string>
    <string name="memberlist">Daftar Anggota</string>
    <string name="role_request">Daftar Permintaan Role</string>
    <string name="edit_role">Edit Role</string>
    <string name="user_info">Informasi Pengguna</string>
    <string name="kominfo">Kominfo</string>
    <string name="soswir">Soswir</string>
    <string name="bangtek">Bangtek</string>
    <string name="ppd">PPD</string>
    <string name="kpo">KPO</string>
    <string name="medin">Media Informasi</string>
    <string name="humas">Hubungan Masyarakat</string>
    <string name="sosial">Sosial</string>
    <string name="kewirausahaan">Kewirausahaan</string>
    <string name="litbang">Penelitian dan Pengembangan</string>
    <string name="pengmas">Pengabdian Masyarakat</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="kerohanian">Kerohanian</string>
    <string name="minat_bakat">Minat dan Bakat</string>
    <string name="kahim">Ketua Himpunan</string>
    <string name="wakahim">Wakil Ketua Himpunan</string>
    <string name="sekum">Sekretaris Umum</string>
    <string name="bendum">Bendahara Umum</string>
    <string name="wasekum">Wakil Sekretasi Umum</string>
    <string name="wabendum">Wakil Bendahara Umum</string>
    <string name="kadep">Kepala Departemen</string>
    <string name="sekdep">Sekretaris Departemen</string>
    <string name="kadiv">Kepala Divisi</string>
    <string name="anggota">Anggota</string>
    <string name="update_role">Update Role</string>
    <string name="please_choose_department">Mohon pilih departemen</string>
    <string name="please_choose_position">Mohon pilih posisi</string>
    <string name="successfully_update_role">Berhasil memperbarui role</string>
    <string name="status_is_completed">Status: Selesai</string>
    <string name="choose_event_date">Pilih Tanggal Acara</string>
    <string name="choose_event_start_time">Pilih Jam Mulai Acara</string>
    <string name="with_notes">Notulensi</string>
    <string name="fill_attendance_list">Isi Daftar Hadir</string>
    <string name="update">Update</string>
    <string name="reject">Tolak</string>
    <string name="attendance_status">Status Kehadiran</string>
    <string name="presence">Hadir</string>
    <string name="present">Hadir</string>
    <string name="sick">Sakit</string>
    <string name="permission">Izin</string>
    <string name="reason_cannot_attend">Alasan tidak dapat hadir</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="please_choose_attendance_status">Mohon Pilih Status Kehadiran</string>
    <string name="btn_edit">Edit button</string>
    <string name="successfully_fill_attendance">Berhasil mengisi data kehadiran</string>
    <string name="empty_reason">Keterangan tidak hadir harus diisi</string>
    <string name="has_filled_attendance">Telah Mengisi Kehadiran</string>
    <string name="attendance_list">Daftar Kehadiran</string>
    <string name="create_event_note">Buat Notulensi Acara</string>
    <string name="add_note">Tambah Notulensi</string>
    <string name="type_or_paste_note_here">Ketik atau tempel catatan disini</string>
    <string name="successfully_add_note">Berhasil menambahkan notulensi acara</string>
    <string name="event_note">Notulensi Acara</string>
    <string name="empty_note">Anda belum mengisi catatan</string>
    <string name="successfully_update_note">Berhasil memperbarui notulensi</string>
    <string name="total_attendees">Total Kehadiran</string>
    <string name="send_feedback">Saran dan Masukan</string>
    <string name="feedback">Feedback</string>
    <string name="send_us_your_feedback">Feedback untuk Ectro</string>
    <string name="tell_your_experience">Ceritakan Pengalamanmu</string>
    <string name="feedback_desc">Nemu bug, punya saran atau ingin ikut belajar dan ngembangin bareng Ectro? \nSilahkan tulis dibawah :)</string>
    <string name="submit">Kirim</string>
    <string-array name="online_event_media">
        <item>Via Online Meeting</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="department_list">
        <item>PH</item>
        <item>Kominfo</item>
        <item>Soswir</item>
        <item>Bangtek</item>
        <item>PPD</item>
        <item>KPO</item>
    </string-array>
    <string-array name="kominfo_division_list">
        <item>Media Informasi</item>
        <item>Humas</item>
    </string-array>
    <string-array name="bangtek_division_list">
        <item>Penelitian dan Pengembangan</item>
        <item>Pengabdian Masyarakat</item>
    </string-array>
    <string-array name="soswir_division_list">
        <item>Sosial</item>
        <item>Kewirausahaan</item>
    </string-array>
    <string-array name="ppd_division_list">
        <item>Pendidikan</item>
        <item>Kerohanian</item>
        <item>Minat dan Bakan</item>
    </string-array>
    <string-array name="ph_position_list">
        <item>Ketua Himpunan</item>
        <item>Wakil Ketua Himpunan</item>
        <item>Sekretaris Umum</item>
        <item>Bendahara Umum</item>
        <item>Wakil Skretaris Umum</item>
        <item>Wakil Bendahara Umum</item>
    </string-array>
    <string name="reset_password">Ganti password</string>
</resources>